--- a/navbar.html
+++ b/navbar.html
@@ -2,7 +2,26 @@
 <head>
 <link rel="stylesheet" type="text/css" href="navbarstyle.css">
 </head>
-  
+<header>
+        <a href="index.html"><img src="logo.jpeg" id="logo"></a>
+    	<div class="navbar">
+  			<a href="#donate">Donate</a>
+  			<a href="#contact">Contact Us</a>
+  			<div class="dropdown">
+    			<button class="dropbtn">
+    			Get Involved
+      			<i class="fa fa-caret-down"></i>
+    			</button>
+    			<div class="dropdown-content">
+     				<a href="#">Volunteer</a>
+      				<a href="#">Department Application</a>
+      				<a href="#">Start a New Chapter</a>
+    			</div>
+  			</div>
+  			<a href="#news">News</a>
+  			<a href="#chapters">Chapters</a>
+		</div>
+    </header>  
 <body>
 
 
