--- a/navbar.html
+++ b/navbar.html
@@ -1,28 +1,39 @@
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="navbarstyle.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="navbarstyle.css">
 </head>
-<header>
-        <a href="index.html"><img src="logo.jpeg" id="logo"></a>
-    	<div class="navbar">
-  			<a href="#donate">Donate</a>
-  			<a href="#contact">Contact Us</a>
-  			<div class="dropdown">
-    			<button class="dropbtn">
-    			Get Involved
-      			<i class="fa fa-caret-down"></i>
-    			</button>
-    			<div class="dropdown-content">
-     				<a href="#">Volunteer</a>
-      				<a href="#">Department Application</a>
-      				<a href="#">Start a New Chapter</a>
-    			</div>
-  			</div>
-  			<a href="#news">News</a>
-  			<a href="#chapters">Chapters</a>
-		</div>
-    </header>  
 <body>
+<a href="index.html"><img src="logo.jpeg" id="logo"></a>
+<div class="topnav" id="myTopnav">
+  <a href="#" class="active">Donate</a>
+    <a href="#">Contact</a>
+      <div class="dropdown">
+    <button class="dropbtn">Get Involved 
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="#">Volunteer</a>
+      <a href="#">Department Application</a>
+      <a href="#">Start a New Chapter</a>
+    </div>
+  </div> 
+  <a href="#">News</a>
+  <a href="#">Chapters</a>
+  <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">☰</a>
+</div>
+
+<script>
+function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+}
+</script>
+
 
 
 </body>
